k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app-service
spec:
  type: ClusterIP
  selector:
    app: nextjs-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
