k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: <your-application-domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-app-service
            port:
              number: 3000
